debugged issue with feedback form hover and submit  connected to dark mode button

--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ button {
  #weatherBtn:hover,
  #localBtn:hover,
  #formBtn:hover,
- #toggleModeBtn:hover
+ #toggleModeBtn:hover,
  #feedback:hover {
     background-color: hwb(0 91% 9% / 0.446);
 }
@@ -255,8 +255,8 @@ nav a:hover {
 /*  Light MODE: Styles applied when body has class "light" */
 body.light .greeting, 
 body.light #enterDashboard, 
-body.light #toggleModeBtn,
-body.light #saveBtn,
+/* body.light #toggleModeBtn, */
+/* body.light #saveBtn, */
 body.light .about,
 body.light #greeting,
 body.light #weather,
@@ -348,16 +348,28 @@ body.light #footer a:hover {
  body.light #weather:hover,
  body.light #notes:hover,
  body.light #tasks:hover,
- body.light #saveBtn:hover,
+ /* body.light #saveBtn:hover, */
  body.light #weatherBtn:hover,
  body.light #localBtn:hover,
- body.light #toggleModeBtn:hover,
+ /* body.light #toggleModeBtn:hover, */
  body.light #formBtn:hover,
  body.light #feedback:hover {
     background-color: hwb(0 91% 9% / 0.8);
     border-radius: 7px;
 }
 
+body.light #toggleModeBtn,
+body.light #saveBtn {
+    color: rgb(59, 59, 59);
+    border-radius: 7px;
+}
+
+body.light #toggleModeBtn:hover,
+body.light #saveBtn:hover {
+    background-color: hwb(0 91% 9% / 0.8);
+    border-radius: 7px;
+    color: white;
+}
 
 body.light .widget {
     /* background-color: rgb(168, 168, 168); */
